# kosis-qbong-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
config/: analysis_rules.yaml  data_requirements.yaml  kosis_tables.yaml  region_codes.yaml
context/: gangneung_industrial_plan_context.md
data/processed/: gangneung_business_survey_2024.parquet  gangneung_business_survey_2024_raw_cells.parquet  gangneung_industry_stats_employees_2015_2030.csv  gangneung_industry_stats_establishments_2015_2030.csv  national_industry_stats_employees_2015_2030.csv  national_industry_stats_establishments_2015_2030.csv
data/sources/local_gov/gangneung/business_survey/2024/: checksum.json  manifest.yaml
data/sources/local_gov/gangneung/business_survey/2024/raw/: 1 산업세세분류별 총괄.xlsx  2 산업소분류 및 읍면동별 사업체수, 종사자수.xlsx  3 산업중분류, 종사자규모 및 읍면동별 사업체수, 종사자수.xlsx  4 산업중분류, 사업체구분 및 읍면동별 사업체수, 종사자수.xlsx  5 산업중분류, 조직형태 및 읍면동별 사업체수, 종사자수.xlsx  6 산업중분류, 종사상지위 및 읍면동별 종사자수.xlsx  7 산업중분류, 대표자남여 및 읍면동별 사업체수.xlsx  8 산업중분류, 종사자남여 및 읍면동별 종사자수.xlsx  (+1 more)
docs/: project_memory.md  self_improve_loop.md
scripts/: check_lq_requirements.py  ingest_gangneung_business_survey.py  inspect_kosis_table.py  run_gangneung_lq.py  run_verified_gangneung_lq.py
src/: __init__.py  classifier.py  config.py  data_gate.py  exporter.py  growth.py  kosis_client.py  local_survey.py  lq.py  metadata.py  models.py  national_survey.py  normalizer.py  pipeline.py  validators.py  verified_lq.py
tests/: conftest.py  test_classifier.py  test_growth.py  test_lq.py  test_normalizer.py  test_validators.py
