[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kosis-industrial-mcp"
version = "0.1.0"
description = "KOSIS industrial statistics LQ analysis MCP server"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1",
  "httpx>=0.27",
  "mcp[cli]>=1.2",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
